--- a/_includes/people-rank.html
+++ b/_includes/people-rank.html
@@ -16,6 +16,8 @@
 </div>
 <div id="people-rank-9" class="grid-container" ><h1 class="rank_title">Ομότιμοι Καθηγητές</h1>
 </div>
+<div id="people-rank-10" class="grid-container" ><h1 class="rank_title">Επίτιμοι Καθηγητές</h1>
+</div>
 
 
 
@@ -40,5 +42,7 @@
       {% include people-rank-div.html content="8" %}
   {% when 9 %}
       {% include people-rank-div.html content="9" %}
+ {% when 10 %}
+      {% include people-rank-div.html content="10" %}
 {% endcase %}
 {% endfor %}
